--- a/c-panel.html
+++ b/c-panel.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/jpg" href="smalllogo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        html { scroll-behavior: smooth; }
         body {
             background: linear-gradient(180deg, #FFFFFF 0%, #F3F4F6 50%, #D1D5DB 100%);
             min-height: 100vh;
@@ -20,7 +21,7 @@
             height: 80px;
             border-radius: 50%;
             cursor: pointer;
-            transition: transform 0.3s ease, border-color 0.3s ease;
+            transition: transform 0.3s ease;
             border: 4px solid white;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             background-size: cover;
@@ -33,37 +34,60 @@
         #lightbox {
             display: none;
             position: fixed;
-            z-index: 100;
+            z-index: 200;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9);
+            background: rgba(0,0,0,0.95);
             justify-content: center;
             align-items: center;
-            cursor: pointer;
         }
-        #lightbox img, #lightbox-iframe {
-            max-width: 90%;
-            max-height: 80vh;
-            box-shadow: 0 0 30px rgba(0,0,0,0.5);
+        #mobile-menu {
+            top: 80px;
+            height: calc(100vh - 80px);
+            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            transform: translateY(-110%);
         }
+        #mobile-menu.active {
+            transform: translateY(0);
+        }
+        .nav-icon { width: 30px; height: 20px; position: relative; cursor: pointer; }
+        .nav-icon span { display: block; position: absolute; height: 3px; width: 100%; background: #0f172a; border-radius: 9px; transition: .25s ease-in-out; }
+        .nav-icon span:nth-child(1) { top: 0px; }
+        .nav-icon span:nth-child(2) { top: 10px; }
+        .nav-icon span:nth-child(3) { top: 20px; }
+        .nav-icon.open span:nth-child(1) { top: 10px; transform: rotate(135deg); }
+        .nav-icon.open span:nth-child(2) { opacity: 0; left: -60px; }
+        .nav-icon.open span:nth-child(3) { top: 10px; transform: rotate(-135deg); }
     </style>
 </head>
-<body class="text-slate-900 font-sans">
+<body class="text-slate-900 font-sans antialiased">
 
     <div id="lightbox" onclick="closeLightbox()">
-        <img id="lightbox-img" src="" alt="Zoomed View" style="display:none;">
-        <iframe id="lightbox-iframe" width="360" height="640" src="" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen style="display:none;" onclick="event.stopPropagation()"></iframe>
+        <img id="lightbox-img" src="" alt="Zoomed View" class="max-w-[90%] max-h-[80vh] rounded shadow-2xl" style="display:none;">
+        <div id="video-container" class="w-full max-w-4xl aspect-video px-4" style="display:none;">
+            <iframe id="lightbox-iframe" class="w-full h-full rounded shadow-2xl" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen onclick="event.stopPropagation()"></iframe>
+        </div>
     </div>
 
-    <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-xl border-b border-slate-200 h-20">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 h-full flex justify-between items-center">
-            <a href="index.html" class="flex items-center gap-2 sm:gap-4 overflow-hidden">
-                <img src="logotransparent.png" alt="Art House Logo" class="h-24 sm:h-36 w-auto object-contain drop-shadow-md">
-                <span class="text-lg sm:text-2xl font-black uppercase tracking-widest text-slate-900 truncate">Arthouse</span>
-            </a>
-            
-            <a href="index.html" class="shrink-0 text-[10px] font-bold uppercase tracking-widest bg-slate-100 px-3 py-2 rounded-full hover:bg-slate-200 transition">
-                ← <span class="hidden sm:inline">Буцах</span>
-            </a>
+    <nav class="sticky top-0 z-[110] bg-white/95 backdrop-blur-md border-b border-slate-200 h-20">
+        <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center text-left">
+            <div class="flex items-center h-full">
+                <a href="index.html" class="flex items-center gap-4">
+                    <img src="logotransparent.png" alt="Art House Logo" class="h-36 w-auto object-contain">
+                    <span class="text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
+                </a>
+            </div>
+
+            <a href="index.html" class="hidden md:inline-block text-sm font-bold uppercase tracking-[0.3em] hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">← Буцах</a>
+
+            <button id="menu-toggle" class="md:hidden z-[120] p-2 focus:outline-none">
+                <div class="nav-icon" id="nav-icon">
+                    <span></span><span></span><span></span>
+                </div>
+            </button>
+        </div>
+
+        <div id="mobile-menu" class="fixed left-0 w-full bg-white z-[100] border-b border-slate-200 flex flex-col items-center justify-center md:hidden shadow-2xl">
+            <a href="index.html" class="text-2xl font-black border-2 border-slate-900 px-12 py-6 hover:bg-slate-900 hover:text-white transition uppercase tracking-widest">← Буцах</a>
         </div>
     </nav>
 
@@ -71,7 +95,7 @@
         <div class="grid lg:grid-cols-2 gap-16">
             
             <div class="order-2 lg:order-1">
-                <h1 class="text-6xl font-black uppercase mb-6">C-PANEL</h1>
+                <h1 class="text-6xl font-black uppercase mb-6 italic">C-PANEL</h1>
                 <p class="text-xl text-slate-600 mb-10 leading-relaxed">
                     C-Panel нь чулуун гадаргуутай дулаалгатай фасад бөгөөд цаг хугацаа болон эдийн засагт хэмнэлт үзүүлж илүү олон жил итгэл алдахгүй байх дэвшилтэд шинэ бүтээгдэхүүн юм.
                 </p>
@@ -80,27 +104,27 @@
                     <h3 class="font-bold uppercase tracking-widest text-sm mb-6">Өнгөний сонголт:</h3>
                     <div class="flex flex-wrap gap-8">
                         <div class="flex flex-col items-center gap-2">
-                            <div class="color-swatch" style="background-image: url('181 c-panel.png');" onclick="openLightbox('181 c-panel.png')" title="Томруулж үзэх"></div>
+                            <div class="color-swatch" style="background-image: url('181 c-panel.png');" onclick="openLightbox('181 c-panel.png')"></div>
                             <span class="text-xs font-bold text-slate-500">181</span>
                         </div>
                         <div class="flex flex-col items-center gap-2">
-                            <div class="color-swatch" style="background-image: url('023 c-panel.png');" onclick="openLightbox('023 c-panel.png')" title="Томруулж үзэх"></div>
+                            <div class="color-swatch" style="background-image: url('023 c-panel.png');" onclick="openLightbox('023 c-panel.png')"></div>
                             <span class="text-xs font-bold text-slate-500">023</span>
                         </div>
                         <div class="flex flex-col items-center gap-2">
-                            <div class="color-swatch" style="background-image: url('038 c-panel.png');" onclick="openLightbox('038 c-panel.png')" title="Томруулж үзэх"></div>
+                            <div class="color-swatch" style="background-image: url('038 c-panel.png');" onclick="openLightbox('038 c-panel.png')"></div>
                             <span class="text-xs font-bold text-slate-500">038</span>
                         </div>
                         <div class="flex flex-col items-center gap-2">
-                            <div class="color-swatch" style="background-image: url('027 c-panel.png');" onclick="openLightbox('027 c-panel.png')" title="Томруулж үзэх"></div>
+                            <div class="color-swatch" style="background-image: url('027 c-panel.png');" onclick="openLightbox('027 c-panel.png')"></div>
                             <span class="text-xs font-bold text-slate-500">027</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="p-8 bg-slate-900 text-white rounded-lg mb-10">
-                    <h5 class="text-l font-bold mb-4 uppercase tracking-wide">Бүтээгдэхүүний танилцуулга бичлэг</h5>
-                    <button onclick="openVideo('https://youtube.com/watch?v=iB0wypw7iac')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
+                <div class="p-8 bg-slate-900 text-white rounded-lg mb-10 text-left">
+                    <h5 class="text-lg font-bold mb-4 uppercase italic">Бүтээгдэхүүний танилцуулга бичлэг</h5>
+                    <button onclick="openVideo('iB0wypw7iac')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
                 </div>
 
                 <table class="w-full border-collapse text-sm mb-12">
@@ -114,28 +138,20 @@
                         <div class="flex flex-col items-center">
                             <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Фэйсбүүк</p>
                             <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="flex items-center gap-2 text-sm font-black hover:text-slate-500 transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
                                 Art House Mongolia
                             </a>
                         </div>
-
                         <div class="w-[1px] h-12 bg-slate-200 hidden sm:block"></div>
-
                         <div class="flex flex-col items-center">
                             <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Утас</p>
                             <div class="flex flex-col gap-3">
                                 <a href="tel:+97688112124" class="flex items-center justify-center gap-2 text-sm font-black hover:text-slate-500 transition">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
                                     88112124
                                 </a>
                                 <a href="tel:+97699234050" class="flex items-center justify-center gap-2 text-sm font-black hover:text-slate-500 transition">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
                                     99234050
                                 </a>
                             </div>
@@ -165,41 +181,52 @@
     </footer>
 
     <script>
+        const menuToggle = document.getElementById('menu-toggle');
+        const navIcon = document.getElementById('nav-icon');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        function toggleMenu() {
+            const isActive = mobileMenu.classList.toggle('active');
+            navIcon.classList.toggle('open');
+            document.body.style.overflow = isActive ? 'hidden' : 'auto';
+        }
+
+        function closeMenu() {
+            mobileMenu.classList.remove('active');
+            navIcon.classList.remove('open');
+            document.body.style.overflow = 'auto';
+        }
+
+        menuToggle.addEventListener('click', (e) => {
+            e.stopPropagation();
+            toggleMenu();
+        });
+
+        window.onpopstate = function() {
+            closeMenu();
+        };
+
         function openLightbox(imgSrc) {
-            const lightbox = document.getElementById('lightbox');
-            const img = document.getElementById('lightbox-img');
-            const iframe = document.getElementById('lightbox-iframe');
-            iframe.style.display = 'none';
-            iframe.src = ""; 
-            img.src = imgSrc;
-            img.style.display = 'block';
-            lightbox.style.display = 'flex';
+            document.getElementById('lightbox-img').src = imgSrc;
+            document.getElementById('lightbox-img').style.display = 'block';
+            document.getElementById('video-container').style.display = 'none';
+            document.getElementById('lightbox').style.display = 'flex';
             document.body.style.overflow = 'hidden';
         }
-        function openVideo(videoSrc) {
-            const lightbox = document.getElementById('lightbox');
-            const img = document.getElementById('lightbox-img');
+
+        function openVideo(videoId) {
             const iframe = document.getElementById('lightbox-iframe');
-            img.style.display = 'none';
-            let videoId = "";
-            if (videoSrc.includes("v=")) {
-                videoId = videoSrc.split("v=")[1].split("&")[0];
-            } else if (videoSrc.includes("shorts/")) {
-                videoId = videoSrc.split("shorts/")[1].split("?")[0];
-            } else if (videoSrc.includes("youtu.be/")) {
-                videoId = videoSrc.split("youtu.be/")[1].split("?")[0];
-            } else if (videoSrc.includes("embed/")) {
-                videoId = videoSrc.split("embed/")[1].split("?")[0];
-            }
             iframe.src = "https://www.youtube.com/embed/" + videoId + "?autoplay=1";
-            iframe.style.display = 'block';
-            lightbox.style.display = 'flex';
+            document.getElementById('lightbox-img').style.display = 'none';
+            document.getElementById('video-container').style.display = 'block';
+            document.getElementById('lightbox').style.display = 'flex';
             document.body.style.overflow = 'hidden';
         }
+
         function closeLightbox() {
             const lightbox = document.getElementById('lightbox');
             const iframe = document.getElementById('lightbox-iframe');
-            iframe.src = "";
+            iframe.src = ""; 
             lightbox.style.display = 'none';
             document.body.style.overflow = 'auto';
         }
