--- a/index.html
+++ b/index.html
@@ -23,55 +23,31 @@
             background-attachment: fixed;
         }
 
-        .clip-path-diag {
-            clip-path: polygon(0 0, 100% 0, 100% 98%, 0% 100%);
-        }
+        .clip-path-diag { clip-path: polygon(0 0, 100% 0, 100% 98%, 0% 100%); }
 
         .bg-text {
-            font-size: 18vw;
-            line-height: 1;
-            font-weight: 900;
-            color: rgba(0,0,0,0.02);
-            position: absolute;
-            right: -2rem;
-            top: 20%;
-            z-index: -1;
-            user-select: none;
-            pointer-events: none;
-            text-transform: uppercase;
+            font-size: 18vw; line-height: 1; font-weight: 900; color: rgba(0,0,0,0.02);
+            position: absolute; right: -2rem; top: 20%; z-index: -1;
+            user-select: none; pointer-events: none; text-transform: uppercase;
         }
 
         .swiper-button-next, .swiper-button-prev { 
-            color: #0f172a !important; 
-            background: rgba(255, 255, 255, 0.9); 
-            width: 55px; 
-            height: 55px; 
-            border-radius: 50%;
-            backdrop-filter: blur(4px);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-            z-index: 20;
-        }
-        .swiper-button-next:after, .swiper-button-prev:after { font-size: 22px; font-weight: bold; }
-
-        .project-overlay {
-            background: linear-gradient(to top, rgba(15, 23, 42, 0.95) 0%, rgba(15, 23, 42, 0.4) 50%, rgba(15, 23, 42, 0) 100%);
+            color: #0f172a !important; background: rgba(255, 255, 255, 0.9); 
+            width: 55px; height: 55px; border-radius: 50%;
+            backdrop-filter: blur(4px); box-shadow: 0 4px 15px rgba(0,0,0,0.15); z-index: 20;
         }
 
         .product-card img { transition: transform 0.5s ease; }
         .product-card:hover img { transform: scale(1.05); }
 
-        /* UPGRADED MOBILE MENU STYLING */
+        /* FIXED MOBILE MENU STYLING */
         #mobile-menu {
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            opacity: 0;
-            visibility: hidden;
-            pointer-events: none;
+            top: 80px; /* Starts exactly below the 80px nav */
+            height: calc(100vh - 80px);
+            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            transform: translateY(-110%);
         }
-        #mobile-menu.active {
-            opacity: 1;
-            visibility: visible;
-            pointer-events: auto;
-        }
+        #mobile-menu.active { transform: translateY(0); }
         
         /* Animated Hamburger to X */
         .nav-icon { width: 30px; height: 20px; position: relative; cursor: pointer; }
@@ -86,7 +62,7 @@
 </head>
 <body class="text-slate-900 font-sans antialiased">
 
-    <nav class="sticky top-0 z-[100] bg-white/80 backdrop-blur-xl border-b border-slate-200 h-20">
+    <nav class="sticky top-0 z-[110] bg-white/95 backdrop-blur-md border-b border-slate-200 h-20">
         <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center">
             <div class="flex items-center h-full">
                 <a href="#" class="flex items-center gap-4 relative">
@@ -99,10 +75,10 @@
                 <a href="#about" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">Бидний тухай</a>
                 <a href="#products" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">Бүтээгдэхүүн</a>
                 <a href="#work" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">Бидний ажил</a>
-                <a href="#contact" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1 text-slate-900 uppercase text-slate-900">Холбоо барих</a>
+                <a href="#contact" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1 text-slate-900 uppercase">Холбоо барих</a>
             </div>
 
-            <button id="menu-toggle" class="md:hidden z-[110] p-2 focus:outline-none" aria-label="Toggle Menu">
+            <button id="menu-toggle" class="md:hidden z-[120] p-2 focus:outline-none">
                 <div class="nav-icon" id="nav-icon">
                     <span></span>
                     <span></span>
@@ -111,20 +87,11 @@
             </button>
         </div>
 
-        <div id="mobile-menu" class="fixed inset-0 bg-white/95 backdrop-blur-2xl z-[105] flex flex-col items-center justify-center space-y-8 md:hidden">
-            <a href="#about" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Бидний тухай</a>
-            <a href="#products" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Бүтээгдэхүүн</a>
-            <a href="#work" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Бидний ажил</a>
-            <a href="#contact" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Холбоо барих</a>
-            
-            <div class="pt-10 flex gap-6">
-                <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="p-3 bg-slate-900 text-white rounded-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-                </a>
-                <a href="tel:+97688112124" class="p-3 bg-slate-900 text-white rounded-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-                </a>
-            </div>
+        <div id="mobile-menu" class="fixed left-0 w-full bg-white z-[100] border-b border-slate-200 flex flex-col items-center justify-center space-y-10 md:hidden shadow-2xl">
+            <a href="#about" onclick="closeMenu()" class="text-xl font-black uppercase tracking-widest text-slate-900">Бидний тухай</a>
+            <a href="#products" onclick="closeMenu()" class="text-xl font-black uppercase tracking-widest text-slate-900">Бүтээгдэхүүн</a>
+            <a href="#work" onclick="closeMenu()" class="text-xl font-black uppercase tracking-widest text-slate-900">Бидний ажил</a>
+            <a href="#contact" onclick="closeMenu()" class="text-xl font-black uppercase tracking-widest text-slate-900">Холбоо барих</a>
         </div>
     </nav>
 
@@ -291,7 +258,7 @@
             breakpoints: { 768: { slidesPerView: 1.2, centeredSlides: true } }
         });
 
-        // IMPROVED Mobile Menu Logic
+        // Mobile Menu Logic
         const menuToggle = document.getElementById('menu-toggle');
         const navIcon = document.getElementById('nav-icon');
         const mobileMenu = document.getElementById('mobile-menu');
